Fix top text spacing take 2.

--- a/_sass/_responsive.scss
+++ b/_sass/_responsive.scss
@@ -16,7 +16,7 @@
 .hero-slide {
   @media (max-width: $breakpoint-md) {
     .slide-content {
-      padding: 8rem $spacing-md $spacing-lg;
+      padding: 5rem;
 
       .slide-headline {
         font-size: 2rem;
